# fastapi-docker-swarm

./: .dockerignore  .gitignore  Dockerfile  LOCAL_DEVELOPMENT.md  Makefile  README.md  Readme.md  automate_deploy.py  cleanup_nodes.py  docker-compose.dev.yml  docker-compose.yml  main.py  post-deploy-checklist.sh  pyproject.toml  setup_swarm.sh  test_main.http  update_app.py  update_services.py
deploy/: infrastructure.yml  services.yml
deploy/monitoring/: loki-config.yml  promtail-config.yml
deploy/monitoring/dashboards/: Docker monitoring.json  FastAPI — HTTP Requests (Simple & Working).json  Node Exporter Full.json  Redis Dashboard (helm stable_redis-ha).json
deploy/nginx/: default.conf
infrastructure/: automate_deploy.py  cleanup_nodes.py  inventory-example.json
services/backend/: .env.example  Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt
services/backend/alembic/: env.py
services/backend/app/: main.py
services/backend/app/api/: deps.py
services/backend/app/api/endpoints/: auth.py  root.py
services/backend/app/core/: config.py
services/backend/app/models/: user.py
services/frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
services/frontend/src/components/: auth-initializer.tsx
services/frontend/src/lib/: axios.ts
