[project]
name = "fastapi-docker-swarm"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.17.2",
    "argon2-cffi==25.1.0",
    "asyncpg==0.31.0",
    "ecdsa>=0.19.1",
    "email-validator==2.3.0",
    "fastapi>=0.128.0",
    "fastapi-limiter==0.1.6",
    "gunicorn==23.0.0",
    "httpx==0.28.1",
    "passlib==1.7.4",
    "psycopg2-binary==2.9.11",
    "pydantic-settings==2.12.0",
    "pytest==9.0.2",
    "python-dotenv==1.2.1",
    "python-jose==3.5.0",
    "python-multipart==0.0.21",
    "redis==7.1.0",
    "sqlalchemy==2.0.45",
    "uvicorn>=0.40.0",
]

[tool.uv.workspace]
members = [
    "services/backend",
]
